k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telco-system
  labels:
    name: telco-system
